# christmas_lists

./: .gitignore  Cargo.toml  Dockerfile  package.sh  test.db  todo.txt
assets/: 404.html  home.html  index.html  main.css  register.html  snowflakes.js
certs/: cert.pem  key.pem
src/: auth_and_login.rs  config.rs  main.rs  route_handlers.rs  routes.rs  tables.rs  utilities.rs
