[package]
name = "christmas_lists"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
argon2 = "0.5.2"
axum = "0.7.3"
futures = "0.3.29"
headers = "0.3.9"
html-escape = "0.2.13"
http = "1.0.0"
http-body-util = "0.1.0"
lettre = { version = "0.11.9", features = ["smtp-transport"] }
num = { version = "0.4.1", features = ["std"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
